fix vertical align of flags in popup
git-svn-id: http://piwigo.org/pem_svn/trunk@360 d4d6b01b-5e10-0410-8d5c-99ab1f9c6602

--- a/template/style.css
+++ b/template/style.css
@@ -774,5 +774,8 @@ div.row  img.help_user
 }
 .flags-table td {
   white-space:nowrap;
-  padding:0;
+  padding:2px;
+}
+.flags-table td span {
+  vertical-align:middle;
 }
